--- a/amazon.html
+++ b/amazon.html
@@ -201,5 +201,9 @@
         </div>
       </div>
     </div>
+    <script src="data/cart.js"></script>
+    <script src="data/products.js"></script>
+    <script src="javascript/amazon.js"></script>
+    <!-- <script src="javascript/amazon.js"></script> -->
   </body>
 </html>
