--- a/amazon.html
+++ b/amazon.html
@@ -54,9 +54,9 @@
     <div class="main">
       <div class="products-grid js-product-grid" ></div>
     </div>
-    <script src="data/cart.js"></script>
-    <script src="data/products.js"></script>
-    <script src="javascript/amazon.js"></script>
-    <!-- <script src="javascript/amazon.js"></script> -->
+    
+   
+    <script type="module" src="javascript/amazon.js"></script>
+    
   </body>
 </html>
