--- a/amazon.html
+++ b/amazon.html
@@ -54,8 +54,8 @@
     <div class="main">
       <div class="products-grid js-product-grid" ></div>
     </div>
-    <script src="data/cart.js"></script>
-    <script src="data/products.js"></script>
+    <!-- <script src="data/cart.js"></script> -->
+    <!-- <script src="data/products.js"></script> -->
     <script  type="module" src="javascript/amazon.js"></script>
     
   </body>
