--- a/orders.html
+++ b/orders.html
@@ -55,9 +55,9 @@
       <div class="page-title">Your Orders</div>
 
       <div class="orders-grid">
-        <div class="order-container">
+        <div class="order-container js_date1">
           
-          <div class="order-header">
+          <div class="order-header ">
             <div class="order-header-left-section">
               <div class="order-date">
                 <div class="order-header-label">Order Placed:</div>
@@ -75,7 +75,7 @@
             </div>
           </div>
 
-          <div class="order-details-grid">
+          <div class="order-details-grid js_order">
             <div class="product-image-container">
               <img src="images/products/athletic-cotton-socks-6-pairs.jpg">
             </div>
@@ -186,5 +186,6 @@
         </div>
       </div>
     </div>
+    <script type="module" src="/javascript/order.js"></script>
   </body>
 </html>
