all project done

--- a/tracking.html
+++ b/tracking.html
@@ -51,7 +51,7 @@
       </div>
     </div>
 
-    <div class="main">
+    <div class="main js-tracking">
       <div class="order-tracking">
         <a class="back-to-orders-link link-primary" href="orders.html">
           View all orders
@@ -88,5 +88,8 @@
         </div>
       </div>
     </div>
+    <script type="module" src="./javascript/tracking.js">
+
+    </script>
   </body>
 </html>
